Creating createText and getText routes
