# api.yml
@@ -7,7 +7,7 @@ info:
     name: MIT
     url: https://opensource.org/licenses/mit-license.php
   version: 1.0.0
-  
+
 servers:
   - description: "Localhost server"
     url: http://localhost:3000
@@ -15,10 +15,10 @@ servers:
 tags:
   - name: text
     description: "Text operations"
-    
+
   - name: authors
     description: "Operation on authors (list, add, delete, ...)"
-    
+
   - name: accounts
     description: "Operation on accounts"
 
@@ -38,7 +38,7 @@ paths:
             items:
               type: string
               format: base64-url
-              
+
         - name: author.identity.id
           description: "Identity ID of the text authors: If defined, then will return each text written by each of these authors"
           in: query
@@ -47,7 +47,7 @@ paths:
             items:
               type: string
               format: base64-url
-              
+
         - name: content
           in: query
           description: "If defined, will return only text containing the given search in the content"
@@ -56,7 +56,7 @@ paths:
             items:
               type: string
               format: url-encoded
-              
+
         - name: context.id
           description: "Context ID of the text"
           in: query
@@ -81,7 +81,7 @@ paths:
           schema:
             type: string
             format: "ISO 8601 Extended Format"
-          
+
         - name: deletion-date.max
           description: "Will return only texts deleted at this date or before (lower or equal)"
           in: query
@@ -89,7 +89,7 @@ paths:
           schema:
             type: string
             format: "ISO 8601 Extended Format"
-            
+
         - name: deletion-date.min
           description: "Will return only texts deleted at this date or after (greater or equal)"
           in: query
@@ -106,14 +106,14 @@ paths:
             items:
               type: string
               format: base64-url
-              
+
         - name: pagination.offset
           description: "If defined, the search will skip the first \"pagination.offset\" result and return the next ones."
           in: query
           schema:
             default: 0
             type: number
-            
+
         - name: pagination.size
           description: "If defined, only the \"pagination.size\" first results after offset will be returned. By default, all results will be returned"
           in: query
@@ -128,13 +128,13 @@ paths:
             items:
               type: string
               format: url-encoded
-              
+
         - name: sort
-          description: > 
+          description: >
             Enable result sorting.
           in: query
           schema:
-            default: 
+            default:
               - _score
             type: array
             items:
@@ -149,7 +149,7 @@ paths:
                 - +title
                 - -title
                 - _score
-          
+
         - name: owner.id
           description: "ID of all text owners"
           in: query
@@ -158,7 +158,7 @@ paths:
             items:
               type: string
               format: base64-url
-          
+
         - name: title
           in: query
           description: "If defined, will return only text containing the given search in the title"
@@ -167,7 +167,7 @@ paths:
             items:
               type: string
               format: url-encoded
-          
+
       responses:
         200:
           description: List of all texts
@@ -177,7 +177,7 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Text"
-    
+
   /text:
     put:
       summary: "Create a new text"
@@ -193,7 +193,7 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/Text"
-                  
+
       responses:
         200:
           description: Text created
@@ -226,10 +226,10 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Text"
-                
+
         404:
           description: "Text not found"
-          
+
     put:
       summary: "Update an text"
       operationId: updateText
@@ -248,19 +248,19 @@ paths:
           Updated text.
           Only non-empty fields in the received object will be updated. This route will merge or update fields depending on their nature:
             - "content" and "formatting" will be replaced by the new value (if non empty)
-            - "owners" and "authors" will be merged: new entries will be added to the actual list.
+            - "owners", "authors" and "contexts" will be merged: new entries will be added to the actual list.
         content:
           application/json:
             schema:
               $ref: "#/components/schemas/Text"
-              
+
       responses:
         200:
           description: "Update successful"
-          
+
         404:
           description: "Text not found"
-          
+
     delete:
       summary: "Delete a text"
       operationId: deleteText
@@ -277,10 +277,10 @@ paths:
       responses:
         200:
           description: "Delete successful"
-          
+
         404:
           description: "Text not found"
-          
+
   /text/{id}/authors:
     get:
       summary: List all authors of a text
@@ -297,7 +297,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
       responses:
         200:
           description: "List of authors"
@@ -307,10 +307,10 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/AccountIdentity"
-                
+
         404:
           description: "Text not found"
-      
+
     put:
       summary: Declare one or several new authors of an text.
       operationId: addAuthors
@@ -324,7 +324,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
       requestBody:
         description: "Authors to add"
         content:
@@ -333,11 +333,11 @@ paths:
               type: array
               items:
                 $ref: "#/components/schemas/AccountIdentity"
-                
+
       responses:
         200:
           description: "Authors added"
-          
+
         404:
           description: "Text not found"
 
@@ -356,7 +356,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
       responses:
         200:
           description: "List of accounts ID"
@@ -367,7 +367,7 @@ paths:
                 items:
                   type: string
                   format: base64-url
-                
+
         404:
           description: "Text not found"
 
@@ -386,7 +386,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: accountId
           in: path
           description: "ID of the account to delete"
@@ -394,21 +394,21 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: keepIdentities
           in: query
           description: "If true, then identities will not be removed (authors will remain without account link)"
           schema:
             type: boolean
             default: false
-                
+
       responses:
         200:
           description: Account removed from authors
-          
+
         404:
           description: Text not found
-          
+
   /text/{id}/authors/account/{accountId}/identities:
     get:
       summary: "Return all identity used by an account to author a text"
@@ -425,7 +425,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: accountId
           in: path
           description: "ID of the account to delete"
@@ -433,7 +433,7 @@ paths:
           schema:
             type: string
             format: base64-url
-                
+
       responses:
         200:
           description: List of identities
@@ -444,10 +444,10 @@ paths:
                 items:
                   type: string
                   format: base64-url
-          
+
         404:
           description: Text not found
-          
+
   /text/{id}/authors/identities:
     get:
       summary: List all authors identities of a text
@@ -463,7 +463,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
       responses:
         200:
           description: "List of identities ID"
@@ -474,10 +474,10 @@ paths:
                 items:
                   type: string
                   format: base64-url
-                
+
         404:
           description: "Text not found"
-          
+
   /text/{id}/authors/identity/{identityId}:
     delete:
       summary: "Delete a identity of a text"
@@ -493,7 +493,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: identityId
           in: path
           description: "ID of the idenetity to delete"
@@ -501,18 +501,18 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: keepAccounts
           in: query
           description: "If true, then accounts will not be removed (authors will remain without account link)"
           schema:
             type: boolean
             default: false
-                
+
       responses:
         200:
           description: Identity removed from authors
-          
+
         404:
           description: Text not found
 
@@ -532,7 +532,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: identityId
           in: path
           description: "ID of the identity"
@@ -540,7 +540,7 @@ paths:
           schema:
             type: string
             format: base64-url
-                
+
       responses:
         200:
           description: List of accounts
@@ -551,7 +551,7 @@ paths:
                 items:
                   type: string
                   format: base64-url
-          
+
         404:
           description: Text not found
 
@@ -570,7 +570,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
       responses:
         200:
           description: "List of owners"
@@ -581,10 +581,10 @@ paths:
                 items:
                   type: string
                   format: base64-url
-                
+
         404:
           description: "Text not found"
-      
+
     put:
       summary: Declare one or several new owners of an text.
       operationId: addOwners
@@ -596,7 +596,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
       requestBody:
         description: "Owners to add"
         content:
@@ -606,11 +606,11 @@ paths:
               items:
                 type: string
                 format: base64-url
-                
+
       responses:
         200:
           description: "Owners added"
-          
+
         404:
           description: "Text not found"
 
@@ -626,7 +626,7 @@ paths:
           schema:
             type: string
             format: base64-url
-            
+
         - name: ownerId
           in: path
           description: "ID of the owner to delete"
@@ -634,11 +634,11 @@ paths:
           schema:
             type: string
             format: base64-url
-                
+
       responses:
         200:
           description: Owner removed
-          
+
         404:
           description: Text not found
 
@@ -650,11 +650,11 @@ components:
         id:
           type: string
           description: ID of the text
-          
+
         text:
           type: string
           description: "Content of the text"
-          
+
         formatting:
           type: object
           description: "Formatting data"
@@ -672,16 +672,26 @@ components:
           items:
             $ref: "#/components/schemas/AccountIdentity"
 
+        contexts:
+          type: array
+          description: "List of all contexts in which the text is used"
+          items:
+              type: string
+              format: base64-url
+
     AccountIdentity:
       type: object
+      required:
+        - account
+        - identity
       properties:
         account:
           type: object
           properties:
-            id: 
+            id:
               type: string
               description: ID of the owner account
-              
+
         identity:
           type: object
           properties:
