# src/api/index.js
@@ -1,39 +1,25 @@
 // ============================================================
 // Import modules
-import checkPassword from './checkPassword';
-import createAccount from './createAccount';
-import deleteAccount from './deleteAccount';
-import getAccount from './getAccount';
-import listAccount from './listAccounts';
-import updateAccount from './updateAccount';
-import updatePassword from './updatePassword';
+import createText from './createText';
+import deleteText from './deleteText';
+import getText from './getText';
+import listTexts from './listTexts';
 
 // ============================================================
 // Functions
 function routes(app) {
     let route;
 
-    // /accounts
-    route = '/accounts';
-    app.get(route, listAccount);
+    route = '/texts';
+    app.get(route, listTexts);
 
-    // /account
-    route = '/account';
-    app.put('/account', createAccount);
+    route = '/text';
+    app.put(route, createText);
 
-    // account/:id
-    route = '/account/:id';
-    app.get(route, getAccount);
-    app.delete(route, deleteAccount);
-    app.post(route, updateAccount);
-
-    // account/:id/password
-    route = '/account/:id/password';
-    app.post(route, updatePassword);
-
-    // account/:id/password/check
-    route = '/account/:id/password/check';
-    app.post(route, checkPassword);
+    route = '/text/:id';
+    app.get(route, getText);
+    app.delete(route, deleteText);
+    app.post(route, updateText);
 }
 
 // ============================================================
